--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ psycopg2==2.9.10
 python3-openid==3.2.0
 pytz==2024.2
 requests-oauthlib==2.0.0
-setuptools>=65.0.0
+setuptools==69.5.1
 sqlparse==0.5.1
 whitenoise==6.8.2
