--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.8.1
-dj-database-url==2.3.0
-Django==3.2
-django-allauth==65.2.0
+dj-database-url>=2.3.0
+Django>=4.2
+django-allauth>=0.51.0
 django-crispy-forms==1.14.0
 django-heroku==0.3.1
 gunicorn==23.0.0
@@ -11,6 +11,6 @@ psycopg2==2.9.10
 python3-openid==3.2.0
 pytz==2024.2
 requests-oauthlib==2.0.0
-setuptools==75.6.0
+setuptools>=65.0.0
 sqlparse==0.5.1
 whitenoise==6.8.2
