--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
 asgiref==3.8.1
-dj-database-url>=2.3.0
-Django>=4.2
-django-allauth>=0.51.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+defusedxml==0.7.1
+dj-database-url==2.3.0
+Django==4.2.16
+django-allauth==65.2.0
 django-crispy-forms==1.14.0
 django-heroku==0.3.1
 gunicorn==23.0.0
+idna==3.10
 oauthlib==3.2.2
+packaging==24.2
 pillow==11.0.0
 psycopg2==2.9.10
 python3-openid==3.2.0
 pytz==2024.2
+requests==2.32.3
 requests-oauthlib==2.0.0
-setuptools>=65.0.0
+setuptools==75.6.0
 sqlparse==0.5.1
+typing_extensions==4.12.2
+urllib3==2.2.3
 whitenoise==6.8.2
